--- a/race_export.ipynb
+++ b/race_export.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "id": "8b1ba65e",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
     "\n",
     "# --- Line classifiers ---\n",
     "RACE_HEADER_RE   = re.compile(r\"^\\s*Oaklawn\\s+Park\\b\", re.IGNORECASE)  # your \"new race\" signal\n",
-    "HORSE_NUM_RE     = re.compile(r\"^\\s*\\d+\\s*$\")\n",
+    "HORSE_NUM_RE     = re.compile(r\"^\\s*\\S+\\s*$\")\n",
     "MORNINGLINE_RE   = re.compile(r\"^\\s*\\d+\\s*-\\s*\\d+\\s*$\")  # e.g., 6-1, 10-1\n",
     "HISTORY_START_RE = re.compile(r\"^\\s*[0-9A-Za-z]+=\")      # e.g., 14Dec25=...\n",
     "\n",
