added changes to improve output format

--- a/race_export.ipynb
+++ b/race_export.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 110,
    "id": "a34a67e7",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "8b1ba65e",
    "metadata": {},
    "outputs": [
@@ -789,10 +789,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "id": "e199f2fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     race_number  horse_number        horse_name      jockey  \\\n",
+      "0              1             1         TakerBack   DELACRUZW   \n",
+      "1              1             2        SweetMusic    CEDILLOA   \n",
+      "2              1             3        HighSummer  HERNANDEZI   \n",
+      "3              1             4          Balladry   ESQUIVELE   \n",
+      "4              1             5          Tartaria   VAZQUEZRA   \n",
+      "..           ...           ...               ...         ...   \n",
+      "103           10            10         CampDaddy   ESPINOZAA   \n",
+      "104           10            11  TwirlingTroillet   ESQUIVELE   \n",
+      "105           10            12        SwissGuard    TORRESJA   \n",
+      "106           10            13             Ember   VAZQUEZRA   \n",
+      "107           10            14    Curlin'sMalibu       SAEZL   \n",
+      "\n",
+      "                trainer  morning_line  early_speed  late_speed  dirt_starts  \\\n",
+      "0        Martin William           6.0        100.0        45.0           10   \n",
+      "1           Berndt Joel           4.0        103.0        59.0           10   \n",
+      "2        Garci^5 Genaro           5.0        114.0        44.0            9   \n",
+      "3    Contreras Cipriano          10.0         77.0        51.0           12   \n",
+      "4          Amoss Thomas           3.5         56.0        75.0            9   \n",
+      "..                  ...           ...          ...         ...          ...   \n",
+      "103   Hernandez Armando          20.0         95.0        83.0           16   \n",
+      "104        Blair Jordan          20.0          NaN         NaN           15   \n",
+      "105        Manley Steve          20.0        103.0        49.0           32   \n",
+      "106         Soto Fermin          20.0         79.0        94.0           22   \n",
+      "107           Sharp Joe           2.0         73.0        60.0           30   \n",
+      "\n",
+      "     dirt_wins  ...  hist12_distance  hist12_distance_type  \\\n",
+      "0            1  ...            5.000                  f(T)   \n",
+      "1            4  ...            5.500                    .f   \n",
+      "2            2  ...            6.500                 .f(A)   \n",
+      "3            2  ...            1.000                   (c)   \n",
+      "4            2  ...            6.000                     f   \n",
+      "..         ...  ...              ...                   ...   \n",
+      "103          3  ...            6.000                     f   \n",
+      "104          3  ...            1.000                  <NA>   \n",
+      "105          6  ...            6.000                    fC   \n",
+      "106          6  ...            1.125                     .   \n",
+      "107          5  ...            1.000                  <NA>   \n",
+      "\n",
+      "                 hist12_class  hist12_beyer  hist12_first_call  \\\n",
+      "0     (fillie)(Md)(Sp)(Wt)32k            52                  2   \n",
+      "1    (fillie)Ë(Md)(Sp)(Wt)95k            68                  3   \n",
+      "2    (fillie)(Md)30000(30-20)            20                  2   \n",
+      "3     (fillie)(OC)100k/ N1X-N            23                3^1   \n",
+      "4           (fillie)(Md)15000            32                  3   \n",
+      "..                        ...           ...                ...   \n",
+      "103     4(older)(Alw)53000N1X            83                  6   \n",
+      "104     3(older)(Clm)20000N2L            59              4^2.5   \n",
+      "105         3(older)(Clm)7500            61                  4   \n",
+      "106      3(older)(Clm)c-16000            75                1^1   \n",
+      "107     3(older)PolynsianB99k            78               5^12   \n",
+      "\n",
+      "     hist12_first_call_pos hist12_first_call_distance hist12_last_call  \\\n",
+      "0                        2                       None              5^2   \n",
+      "1                        3                       None           4^1.75   \n",
+      "2                        2                       None          7^14.50   \n",
+      "3                        3                          1               ^8   \n",
+      "4                        3                       None           7^7.25   \n",
+      "..                     ...                        ...              ...   \n",
+      "103                      6                       None            2^1.5   \n",
+      "104                      4                        2.5              3^3   \n",
+      "105                      4                       None           4^3.25   \n",
+      "106                      1                          1              3^6   \n",
+      "107                      5                         12          2^11.50   \n",
+      "\n",
+      "     hist12_last_call_pos hist12_last_call_distance  \n",
+      "0                       5                         2  \n",
+      "1                       4                      1.75  \n",
+      "2                       7                     14.50  \n",
+      "3                                                 8  \n",
+      "4                       7                      7.25  \n",
+      "..                    ...                       ...  \n",
+      "103                     2                       1.5  \n",
+      "104                     3                         3  \n",
+      "105                     4                      3.25  \n",
+      "106                     3                         6  \n",
+      "107                     2                     11.50  \n",
+      "\n",
+      "[108 rows x 160 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# 1) Race + horse boundary detection (line-by-line safe)\n",
@@ -856,10 +942,16 @@
     "HIST_FIELDS = [\n",
     "    \"date\",\n",
     "    \"type\",\n",
+    "    \"distance\",\n",
+    "    \"distance_type\",\n",
     "    \"class\",\n",
     "    \"beyer\",\n",
     "    \"first_call\",\n",
+    "    \"first_call_pos\",\n",
+    "    \"first_call_distance\",\n",
     "    \"last_call\",\n",
+    "    \"last_call_pos\",\n",
+    "    \"last_call_distance\"\n",
     "]\n",
     "\n",
     "columns = [\n",
@@ -936,7 +1028,7 @@
     "                \"horse_name\": line,\n",
     "                \"jockey\": None,\n",
     "                \"trainer\": None,\n",
-    "                \"morning_line\": f\"{ml.group(1)}-{ml.group(2)}\",\n",
+    "                \"morning_line\": int(ml.group(1))/int(ml.group(2)),\n",
     "                \"early_speed\": None,\n",
     "                \"late_speed\": None,\n",
     "                \"dirt_starts\": None,\n",
@@ -1011,11 +1103,56 @@
     "# Flush last horse\n",
     "flush_current()\n",
     "\n",
+    "def to_decimal(x):\n",
+    "    if pd.isna(x):\n",
+    "        return pd.NA\n",
+    "    if \".\" in x:\n",
+    "        return float(x)           # already 0.xx\n",
+    "    return float(f\"0.{x}\")        # digits like 70 -> 0.70\n",
+    "\n",
+    "def split_distance(series: pd.Series):\n",
+    "    s = series.fillna(\"\")\n",
+    "\n",
+    "    int_part = s.str.extract(r\"^\\s*(\\d+)\")[0]\n",
+    "    frac_raw = s.str.extract(r\"\\^(0?\\.\\d+|\\d+)\")[0]\n",
+    "    frac_decimal = frac_raw.apply(to_decimal)\n",
+    "    distance_part = (pd.to_numeric(int_part, errors=\"coerce\") + pd.to_numeric(frac_decimal, errors=\"coerce\").fillna(0))\n",
+    "    distance_part = distance_part.mask(distance_part == 1.7, 1)\n",
+    "\n",
+    "    other = (\n",
+    "        s.str.replace(r\"\\d+|\\^\", \"\", regex=True)\n",
+    "         .str.strip()\n",
+    "         .replace(\"\", pd.NA)\n",
+    "    )\n",
+    "\n",
+    "    return distance_part, other\n",
+    "\n",
     "df = pd.DataFrame(rows, columns=columns)\n",
+    "# split first/last call for every history slot\n",
+    "for i in range(1, MAX_HIST + 1):\n",
+    "    type_col = f\"hist{i}_type\"\n",
+    "    first_col = f\"hist{i}_first_call\"\n",
+    "    last_col = f\"hist{i}_last_call\"\n",
+    "\n",
+    "    distance, other = split_distance(df[type_col])\n",
+    "\n",
+    "    df[f\"hist{i}_distance\"] = distance\n",
+    "\n",
+    "    df[f\"hist{i}_distance_type\"] = other\n",
+    "   \n",
+    "    df[[f\"hist{i}_first_call_pos\", f\"hist{i}_first_call_distance\"]] = (\n",
+    "        df[first_col].str.split(\"^\", n=1, expand=True)\n",
+    "    )\n",
+    "    df[[f\"hist{i}_last_call_pos\", f\"hist{i}_last_call_distance\"]] = (\n",
+    "        df[last_col].str.split(\"^\", n=1, expand=True)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "print(df)\n",
     "\n",
     "df.to_csv(\"C:\\\\Users\\\\tnaut\\\\horse_racing_calculator\\\\race_data\\\\output.csv\", index=False)\n",
     "\n",
-    "df.to_excel(\"C:\\\\Users\\\\tnaut\\\\horse_racing_calculator\\\\race_data\\\\output.xlsx\", index=False)\n",
+    "# df.to_excel(\"C:\\\\Users\\\\tnaut\\\\horse_racing_calculator\\\\race_data\\\\output.xlsx\", index=False)\n",
     "\n",
     "\n",
     "\n"
