more changes to improve output

--- a/race_export.ipynb
+++ b/race_export.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
    "id": "a34a67e7",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 120,
    "id": "8b1ba65e",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "e199f2fb",
    "metadata": {},
    "outputs": [
@@ -797,85 +797,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     race_number  horse_number        horse_name      jockey  \\\n",
-      "0              1             1         TakerBack   DELACRUZW   \n",
-      "1              1             2        SweetMusic    CEDILLOA   \n",
-      "2              1             3        HighSummer  HERNANDEZI   \n",
-      "3              1             4          Balladry   ESQUIVELE   \n",
-      "4              1             5          Tartaria   VAZQUEZRA   \n",
-      "..           ...           ...               ...         ...   \n",
-      "103           10            10         CampDaddy   ESPINOZAA   \n",
-      "104           10            11  TwirlingTroillet   ESQUIVELE   \n",
-      "105           10            12        SwissGuard    TORRESJA   \n",
-      "106           10            13             Ember   VAZQUEZRA   \n",
-      "107           10            14    Curlin'sMalibu       SAEZL   \n",
+      "     race_number  horse_number  horse_name      jockey             trainer  \\\n",
+      "0              1           1.0   TakerBack   DELACRUZW      Martin William   \n",
+      "1              1           2.0  SweetMusic    CEDILLOA         Berndt Joel   \n",
+      "2              1           3.0  HighSummer  HERNANDEZI      Garci^5 Genaro   \n",
+      "3              1           4.0    Balladry   ESQUIVELE  Contreras Cipriano   \n",
+      "4              1           5.0    Tartaria   VAZQUEZRA        Amoss Thomas   \n",
+      "..           ...           ...         ...         ...                 ...   \n",
+      "195           10           NaN         NaN         NaN                 NaN   \n",
+      "196           10           NaN         NaN         NaN                 NaN   \n",
+      "197           10           NaN         NaN         NaN                 NaN   \n",
+      "198           10           NaN         NaN         NaN                 NaN   \n",
+      "199           10           NaN         NaN         NaN                 NaN   \n",
       "\n",
-      "                trainer  morning_line  early_speed  late_speed  dirt_starts  \\\n",
-      "0        Martin William           6.0        100.0        45.0           10   \n",
-      "1           Berndt Joel           4.0        103.0        59.0           10   \n",
-      "2        Garci^5 Genaro           5.0        114.0        44.0            9   \n",
-      "3    Contreras Cipriano          10.0         77.0        51.0           12   \n",
-      "4          Amoss Thomas           3.5         56.0        75.0            9   \n",
-      "..                  ...           ...          ...         ...          ...   \n",
-      "103   Hernandez Armando          20.0         95.0        83.0           16   \n",
-      "104        Blair Jordan          20.0          NaN         NaN           15   \n",
-      "105        Manley Steve          20.0        103.0        49.0           32   \n",
-      "106         Soto Fermin          20.0         79.0        94.0           22   \n",
-      "107           Sharp Joe           2.0         73.0        60.0           30   \n",
+      "     morning_line  early_speed  late_speed  dirt_starts  dirt_wins  ...  \\\n",
+      "0             6.0        100.0        45.0         10.0        1.0  ...   \n",
+      "1             4.0        103.0        59.0         10.0        4.0  ...   \n",
+      "2             5.0        114.0        44.0          9.0        2.0  ...   \n",
+      "3            10.0         77.0        51.0         12.0        2.0  ...   \n",
+      "4             3.5         56.0        75.0          9.0        2.0  ...   \n",
+      "..            ...          ...         ...          ...        ...  ...   \n",
+      "195           NaN          NaN         NaN          NaN        NaN  ...   \n",
+      "196           NaN          NaN         NaN          NaN        NaN  ...   \n",
+      "197           NaN          NaN         NaN          NaN        NaN  ...   \n",
+      "198           NaN          NaN         NaN          NaN        NaN  ...   \n",
+      "199           NaN          NaN         NaN          NaN        NaN  ...   \n",
       "\n",
-      "     dirt_wins  ...  hist12_distance  hist12_distance_type  \\\n",
-      "0            1  ...            5.000                  f(T)   \n",
-      "1            4  ...            5.500                    .f   \n",
-      "2            2  ...            6.500                 .f(A)   \n",
-      "3            2  ...            1.000                   (c)   \n",
-      "4            2  ...            6.000                     f   \n",
-      "..         ...  ...              ...                   ...   \n",
-      "103          3  ...            6.000                     f   \n",
-      "104          3  ...            1.000                  <NA>   \n",
-      "105          6  ...            6.000                    fC   \n",
-      "106          6  ...            1.125                     .   \n",
-      "107          5  ...            1.000                  <NA>   \n",
+      "     hist12_distance  hist12_distance_type              hist12_class  \\\n",
+      "0                5.0                  f(T)   (fillie)(Md)(Sp)(Wt)32k   \n",
+      "1                5.5                    .f  (fillie)Ë(Md)(Sp)(Wt)95k   \n",
+      "2                6.5                 .f(A)  (fillie)(Md)30000(30-20)   \n",
+      "3                8.0                   (c)   (fillie)(OC)100k/ N1X-N   \n",
+      "4                6.0                     f         (fillie)(Md)15000   \n",
+      "..               ...                   ...                       ...   \n",
+      "195              NaN                   NaN                       NaN   \n",
+      "196              NaN                   NaN                       NaN   \n",
+      "197              NaN                   NaN                       NaN   \n",
+      "198              NaN                   NaN                       NaN   \n",
+      "199              NaN                   NaN                       NaN   \n",
       "\n",
-      "                 hist12_class  hist12_beyer  hist12_first_call  \\\n",
-      "0     (fillie)(Md)(Sp)(Wt)32k            52                  2   \n",
-      "1    (fillie)Ë(Md)(Sp)(Wt)95k            68                  3   \n",
-      "2    (fillie)(Md)30000(30-20)            20                  2   \n",
-      "3     (fillie)(OC)100k/ N1X-N            23                3^1   \n",
-      "4           (fillie)(Md)15000            32                  3   \n",
-      "..                        ...           ...                ...   \n",
-      "103     4(older)(Alw)53000N1X            83                  6   \n",
-      "104     3(older)(Clm)20000N2L            59              4^2.5   \n",
-      "105         3(older)(Clm)7500            61                  4   \n",
-      "106      3(older)(Clm)c-16000            75                1^1   \n",
-      "107     3(older)PolynsianB99k            78               5^12   \n",
+      "     hist12_beyer  hist12_first_call  hist12_first_call_pos  \\\n",
+      "0              52                  2                      2   \n",
+      "1              68                  3                      3   \n",
+      "2              20                  2                      2   \n",
+      "3              23                3^1                      3   \n",
+      "4              32                  3                      3   \n",
+      "..            ...                ...                    ...   \n",
+      "195           NaN                NaN                    NaN   \n",
+      "196           NaN                NaN                    NaN   \n",
+      "197           NaN                NaN                    NaN   \n",
+      "198           NaN                NaN                    NaN   \n",
+      "199           NaN                NaN                    NaN   \n",
       "\n",
-      "     hist12_first_call_pos hist12_first_call_distance hist12_last_call  \\\n",
-      "0                        2                       None              5^2   \n",
-      "1                        3                       None           4^1.75   \n",
-      "2                        2                       None          7^14.50   \n",
-      "3                        3                          1               ^8   \n",
-      "4                        3                       None           7^7.25   \n",
-      "..                     ...                        ...              ...   \n",
-      "103                      6                       None            2^1.5   \n",
-      "104                      4                        2.5              3^3   \n",
-      "105                      4                       None           4^3.25   \n",
-      "106                      1                          1              3^6   \n",
-      "107                      5                         12          2^11.50   \n",
+      "    hist12_first_call_distance hist12_last_call  hist12_last_call_pos  \\\n",
+      "0                         None              5^2                     5   \n",
+      "1                         None           4^1.75                     4   \n",
+      "2                         None          7^14.50                     7   \n",
+      "3                            1               ^8                         \n",
+      "4                         None           7^7.25                     7   \n",
+      "..                         ...              ...                   ...   \n",
+      "195                        NaN              NaN                   NaN   \n",
+      "196                        NaN              NaN                   NaN   \n",
+      "197                        NaN              NaN                   NaN   \n",
+      "198                        NaN              NaN                   NaN   \n",
+      "199                        NaN              NaN                   NaN   \n",
       "\n",
-      "     hist12_last_call_pos hist12_last_call_distance  \n",
-      "0                       5                         2  \n",
-      "1                       4                      1.75  \n",
-      "2                       7                     14.50  \n",
-      "3                                                 8  \n",
-      "4                       7                      7.25  \n",
-      "..                    ...                       ...  \n",
-      "103                     2                       1.5  \n",
-      "104                     3                         3  \n",
-      "105                     4                      3.25  \n",
-      "106                     3                         6  \n",
-      "107                     2                     11.50  \n",
+      "    hist12_last_call_distance  \n",
+      "0                           2  \n",
+      "1                        1.75  \n",
+      "2                       14.50  \n",
+      "3                           8  \n",
+      "4                        7.25  \n",
+      "..                        ...  \n",
+      "195                       NaN  \n",
+      "196                       NaN  \n",
+      "197                       NaN  \n",
+      "198                       NaN  \n",
+      "199                       NaN  \n",
       "\n",
-      "[108 rows x 160 columns]\n"
+      "[200 rows x 160 columns]\n"
      ]
     }
    ],
@@ -1118,6 +1118,8 @@
     "    frac_decimal = frac_raw.apply(to_decimal)\n",
     "    distance_part = (pd.to_numeric(int_part, errors=\"coerce\") + pd.to_numeric(frac_decimal, errors=\"coerce\").fillna(0))\n",
     "    distance_part = distance_part.mask(distance_part == 1.7, 1)\n",
+    "    int_part_num = pd.to_numeric(int_part, errors=\"coerce\")\n",
+    "    distance_part = distance_part.where(int_part_num != 1, distance_part * 8)\n",
     "\n",
     "    other = (\n",
     "        s.str.replace(r\"\\d+|\\^\", \"\", regex=True)\n",
@@ -1147,6 +1149,22 @@
     "        df[last_col].str.split(\"^\", n=1, expand=True)\n",
     "    )\n",
     "\n",
+    "# sort and assign row number within each race\n",
+    "df = df.sort_values([\"race_number\", \"horse_number\"], kind=\"stable\")\n",
+    "df[\"race_row\"] = df.groupby(\"race_number\").cumcount()\n",
+    "\n",
+    "# build a 20‑row scaffold per race\n",
+    "races = df[\"race_number\"].unique()\n",
+    "scaffold = (\n",
+    "    pd.MultiIndex.from_product([races, range(20)], names=[\"race_number\", \"race_row\"])\n",
+    "    .to_frame(index=False)\n",
+    ")\n",
+    "\n",
+    "# left join to pad missing rows\n",
+    "df = scaffold.merge(df, on=[\"race_number\", \"race_row\"], how=\"left\")\n",
+    "\n",
+    "# optional cleanup\n",
+    "df = df.drop(columns=[\"race_row\"])\n",
     "\n",
     "print(df)\n",
     "\n",
